Updated checkstyle.xml & added spotless plugin (#41)
* Updated checkstyle.xml

* Checkstyle issues and disabled code coverage failure check temporarily.

* Added and applied spotless